Fixed Text Centering in Changelogs

--- a/Variants/Changelogs/1.16.5 - 1.8.0.2 (HTML)/Changelog 1.8.0.2.html
+++ b/Variants/Changelogs/1.16.5 - 1.8.0.2 (HTML)/Changelog 1.8.0.2.html
@@ -18,9 +18,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-color: rgb(9, 9, 9);">
-  <picture> <center> <img style="width:auto;height:auto;margin:15px;" src="ChangelogPhoto.png"> </center> </picture>
-  <center> <h1>- Variants - 1.8.0.2 -</h1> </center>
-  <p><b>Written By:</b> <img src="isabella-face.png"> JuneTheWoods</p>
+  <picture> <div style="text-align: center;"> <img style="width:auto;height:auto;margin:15px;" src="ChangelogPhoto.png"> </div> </picture>
+  <div style="text-align: center;"> <h1>- Variants - 1.8.0.2 -</h1> </div>
+  <p><b>Written By:</b> <img src="isabella-face.png"> isabellawoods</p>
   <p><b>Written On:</b> August 14th, 2024</p>
 
   <div>
@@ -112,7 +112,7 @@
       </ul>
     </ul>
   </article>
-  <center><h1>Variants Versions</h1></center>
+  <div style="text-align: center;"> <h1>Variants Versions</h1></div>
   <div style="overflow-x: auto">
     <table style="color: rgb(15, 29, 18)">
       <tr>
